--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/images/icons/resume.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Jeff_resume</title>
+        <title>Jeff_resume1</title>
 
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Saira:400,700" rel="stylesheet" type="text/css">
