--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vue3-resume/images/icons/resume.ico" />
+        <link rel="icon" type="image/svg+xml" href="./images/icons/resume.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Jeff_resume5</title>
 
